syntax = "proto3";

package product;

import "google/protobuf/timestamp.proto";

// protoc-gen-go version is greater than 1.4.0, proto file needs to add go_package, otherwise it can't be generated
option go_package = "./product";

message CreateProductRequest {
    string name = 1;
    uint64 price = 2;
    string description = 3;
    string size = 4;
    string color = 5;
    string brand = 6;
    string shade = 7;
    string washCare = 8;
    string stretchable = 9;
    string distress = 10;
    string features = 11;
    string fade = 12;
    string fabric = 13;
    string category = 14;
    string countryOfOrigin = 15;
    uint32 discount = 16;
    uint64 quantity = 17;
    google.protobuf.Timestamp createdAt = 18;
    google.protobuf.Timestamp updatedAt = 19;
    google.protobuf.Timestamp archivedAt = 20;
}

message ProductResponse {
    string id = 1;
    string name = 2;
    uint64 price = 3;
    string description = 4;
    string size = 5;
    string color = 6;
    string brand = 7;
    string shade = 8;
    string washCare = 9;
    string stretchable = 10;
    string distress = 11;
    string features = 12;
    string fade = 13;
    string fabric = 14;
    string category = 15;
    string countryOfOrigin = 16;
    uint32 discount = 17;
    uint64 quantity = 18;

    google.protobuf.Timestamp createdAt = 19;
    google.protobuf.Timestamp updatedAt = 20;
    google.protobuf.Timestamp archivedAt = 21;
}

message GetProductByIdRequest {
    string id = 1;
}

message UpdateProductRequest {
    optional string name = 1;
    optional uint64 price = 2;
    optional string description = 3;
    optional string size = 4;
    optional string color = 5;
    optional string brand = 6;
    optional string shade = 7;
    optional string washCare = 8;
    optional string stretchable = 9;
    optional string distress = 10;
    optional string features = 11;
    optional string fade = 12;
    optional string fabric = 13;
    optional string category = 14;
    optional string countryOfOrigin = 15;
    optional uint32 discount = 16;
    optional uint64 quantity = 17;
}

message DeleteProductByIdRequest {
    string id = 1;
}

service Product {
    rpc getProduct(GetProductByIdRequest) returns(ProductResponse);
    rpc createProduct(CreateProductRequest) returns(ProductResponse);
    rpc updateProduct(UpdateProductRequest) returns(ProductResponse);
    rpc deleteProduct(DeleteProductByIdRequest) returns(ProductResponse);
}